59

* Fix saving photo (Martin Abente Lahaye),
* New translations (Chris Leonard et al),
* Refresh POT file (James Cameron),

58

* Replace screenshots and update metadata (Ashnidh),
* Port to Telepathy via D-Bus (James Cameron),
* Port to Python 3 (Ibiam Chihurumnaya),
* Update AIML and recompile Brain (Ibiam Chihurumnaya),
* Fix missing sunglasses (James Cameron),
* Port to sugar3.speech (Ibiam Chihurumnaya),
* Fix missing mouth on welcome speech (James Cameron),
* Fix support for non-english languages (Martin Abente Lahaye),

57

* Port from GConf to Gio.Settings (James Cameron),
* New translations (Chris Leonard et al),
* Port from GObject to GLib (James Cameron),
* Fix occasional ValueError (James Cameron),
* Fix occasional ZeroDivisionError (James Cameron),
* Port to TelepathyGLib (James Cameron),

56

* Fix fail to start when used with espeak-ng 1.49.2 (James Cameron),
* New translations (Chris Leonard et al),

55

* Fix fail to start when used with espeak-ng 1.49.1 (James Cameron),
* New translations (Chris Leonard et al),
* Update POT file (James Cameron),

54

* Remove curse filter; ineffective, untranslated and is offensive
  source code (James Cameron),
* New translations (Chris Leonard et al),
* Update POT file (James Cameron),

53

* New translations
* Fix repository in activity.info
* Port to GTK 3 and GStreamer 1.0
* Make mouth animation follow sound more closely
* Enable URL clicking in chat view
* Fix accelerometer fun (v48)
* Fix swap of waveform and frequency mouth buttons

52

* New translations
* Added repository to activity.info

51

* Compatibity change for Debian (Gonzalo Odiard)

50

* New icon for photoface

49

* Added talking photoface (samdroid with an assist from ignacio)

48

* Added idle-time chatter
* Added some accelerometer fun
* Added more eye styles
* Using XO color for background
* Redesigned chat look and feel
* Using palettes instead of radio buttons
* Using palettes instead of combo boxes
* Removed deprecated code

41
