@@ -6,9 +6,9 @@ url = http://wiki.sugarlabs.org/go/Activities/Speak
 license = GPLv3+
 categories = language
 icon = activity-speak-ai
-exec = sugar-activity3 activity.SpeakActivity
-activity_version = 59
-bundle_id = vu.lux.olpc.Speak
+exec = sugar-activity3 activity.SpeakAIActivity
+activity_version = 1
+bundle_id = vu.lux.olpc.SpeakAI
 tags = Language
 repository = https://github.com/sugarlabs/speak-ai
-screenshots = https://github.com/sugarlabs/speak/blob/master/screenshots/en/1.png https://github.com/sugarlabs/speak/blob/master/screenshots/en/2.png
+screenshots = https://github.com/sugarlabs/speak-ai/blob/master/screenshots/en/1.png https://github.com/sugarlabs/speak-ai/blob/master/screenshots/en/2.png
